# cc

./: .dockerignore  .gitignore  CLAUDE.md  README.md  SUMMARY.md  install.sh  pyproject.toml  ruff.toml  test-install.Dockerfile
.github/workflows/: test.yml
deploy/: cc-sync.service  cc-web.service  setup-pi.sh
design/: db-and-completion.md
docs/: README.md  changelog.md  history.md  internals.md
docs/commands/: README.md  cd.md  intel.md  psx.md  reindex.md  rnd.md  run.md  setup.md  sh.md  stat.md  switch.md  sync.md  ticket.md  time.md  tunnel.md  web.md  workspace.md
docs/concepts/: README.md  ide-writers.md  multi-version-mode.md  projects-environments.md  timesheet.md
docs/configuration/: README.md  settings.md
docs/getting-started/: README.md  first-switch.md  installation.md
src/cc/: __init__.py  main.py
tests/: conftest.py  test_argument.py  test_cloc.py  test_command_groups.py  test_command_registration.py  test_completion.py  test_daemon_handlers.py  test_daemon_quiet.py  test_db_cache.py  test_db_create_picker.py  test_dropdb.py  test_env_lifecycle.py  test_env_selector.py  test_events.py  test_exit_codes.py  test_fetch_rnd.py  test_forward_ports.py  test_gh.py  test_ide_writers.py  test_migration_tolerance.py  test_odoo_runtime.py  test_ordering.py  test_orm.py  test_path_completer.py  test_path_prompt.py  test_pg_backend.py  test_pg_connect.py  test_pg_docker.py  test_pg_errors.py  test_rnd.py  test_rnd_creation.py  test_router.py  test_services.py  test_single_active.py  test_switch_previous.py  test_sync.py  test_sync_auto.py  test_sync_http.py  test_ticket.py  test_timesheet.py  (+6 more)
web/: next.config.ts  package-lock.json  package.json  proxy.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: ActivityStrip.tsx  AppNav.tsx  ClocClient.tsx  CopyButton.tsx  DashboardClient.tsx  DatabasesClient.tsx  EnvDetail.tsx  (+15 more)
(+270 files in other folders)
