[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-cli"
dynamic = ["version"]  # ← single source: cc.utils.constants.CC_VERSION
description = "A workflow tool for Odoo developers — projects, environments, databases, and editor state in one switch."
readme = "README.md"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
  {name = "Peter-John Hein", email = "hein.peterjohn@gmail.com"},
  {name = "Yousef Al Nashef"},
]
requires-python = ">=3.10"
keywords = ["odoo", "cli", "developer-tools", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "prompt-toolkit>=3.0.52",
    "rich>=15.0.0",
]

[project.urls]
Homepage = "https://cc.chronocoder.com"
Documentation = "https://cc.chronocoder.com"
Repository = "https://github.com/Chrono-Coder/cc"
Issues = "https://github.com/Chrono-Coder/cc/issues"
Changelog = "https://cc.chronocoder.com/docs/changelog"

[project.optional-dependencies]
sync = ["pycryptodomex>=3.20.0"]

[project.scripts]
_cc_internal = "cc.main:main"

[tool.setuptools.dynamic]
version = {attr = "cc.utils.constants.CC_VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cc" = ["sql/*.sql", "templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = false
